# netbox-operator-framework

./: README.md  pyproject.toml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/design/: lifecycle.rst  webhooks.rst
docs/source/tutorials/: background-tasks.rst  client.rst  custom-events.rst  webhooks.rst
src/nopf/: __init__.py  logging.py  schema.py  settings.py
src/nopf/api/: __init__.py  deps.py  router.py  security.py
src/nopf/client/: __init__.py  _validator.py  operation.py
src/nopf/core/: channel.py  errors.py  handlers.py  tasks.py
src/nopf/operator/: __init__.py  controller.py  setup.py  shutdown.py
tests/common/: pytest.ini
tests/common/specs/: test_api.py  test_core_channel.py  test_core_handlers.py  test_core_tasks.py  test_errors.py  test_logging.py  test_netbox_client.py
tests/netbox-v3.6.x/: openapi.yml
tests/netbox-v3.6.x/specs/: conftest.py  test_client.py  test_tasks.py  test_webhooks.py
tests/netbox-v4.x/: openapi.yml
tests/netbox-v4.x/specs/: conftest.py  test_client.py  test_errors.py  utils.py
